--- a/environment.yml
+++ b/environment.yml
@@ -4,11 +4,12 @@ channels:
 dependencies:
   - python=3.11
   - numpy
+  - nibabel
   - scipy
   - numba
   - pywavelets
   - tqdm
-  - nibabel
   - pip
   - pip:
       - sigpy
+      - brkraw
